add ansible keypair

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,3 +6,4 @@ roles_path = ./roles:./roles/internal:./roles/external:./roles/galaxy
 ansible_managed = Ansible managed file DO NOT edit directly
 connection_plugins = ./plugins/connection
 jinja2_extensions = jinja2.ext.do
+ansible_ssh_private_key_file = /etc/ansible/files/keys/ansible_private_key
