clean up inventory

--- a/310-inventory.ini
+++ b/310-inventory.ini
@@ -1,18 +1,26 @@
-# FreeBSD Boxes
 [freebsd]
-do-fra ansible_host=46.101.222.51
+do-fra
 
-# CentOS Boxes
 [centos]
-do-jfk ansible_host=67.205.142.163
+do-jfk
 
-# Boxes located in USWEST
 [uswest]
 
-# Boxes located in USEAST
-[useast]
-do-jfk ansible_host=67.205.142.163
 
-# Boxes located in EU
-[eu]
-do-fra ansible_host=46.101.222.51
+[useast]
+do-jfk
+
+[euwest]
+do-fra
+
+[eueast]
+
+
+[usa:children]
+useast
+uswest
+uscentral
+
+[eu:children]
+euwest
+eueast
