update do-fra to do-fra1

--- a/310-inventory.ini
+++ b/310-inventory.ini
@@ -1,20 +1,26 @@
+[bsd11]
+do-fra1
+
 [freebsd]
-do-fra
+do-fra1
 
 [centos]
 do-jfk
 
-[uswest]
-
-
 [useast]
 do-jfk
 
-[euwest]
-do-fra
+[uscentral]
+
+
+[uswest]
+
 
 [eueast]
 
+
+[euwest]
+do-fra1
 
 [usa:children]
 useast
