--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,14 +6,13 @@ roles_path = ./roles:./roles/internal:./roles/external:./roles/galaxy
 ansible_managed = Ansible managed file DO NOT edit directly
 connection_plugins = ./plugins/connection
 jinja2_extensions = jinja2.ext.do
-private_key_file = /etc/ansible/files/keys/ansible_private_key
+ansible_ssh_private_key_file = /etc/ansible/files/keys/ansible_id_rsa
 remote_user = ansible
 ask_vault_pass = True
 force_color = 1
 inventory = /etc/ansible/310-inventory.ini
 log_path=/var/log/ansible.log
-sudo_user = root
 timeout = 30
 become = True
-become_method = su
 become_user = root
+ansible_nocows = 1
