add banner and update inventory

--- a/310-inventory.ini
+++ b/310-inventory.ini
@@ -1,8 +1,10 @@
 [bsd11]
 do-fra1
+do-lhr1
 
 [freebsd]
 do-fra1
+do-lhr1
 
 [centos]
 do-jfk
@@ -21,6 +23,7 @@ do-jfk
 
 [euwest]
 do-fra1
+do-lhr1
 
 [usa:children]
 useast
