--- a/roles/deploy-freebsd11/tasks/users.yml
+++ b/roles/deploy-freebsd11/tasks/users.yml
@@ -16,12 +16,19 @@
     user: '{{ user1_name }}'
     key: '{{ user1_pub_key }}'
 
+- name: Ensure user is in /usr/local/etc/sudoers with no pass required
+  remote_user: root
+  lineinfile:
+    dest: /usr/local/etc/sudoers
+    state: present
+    regexp: '^dryan ALL\='
+    line: 'dryan ALL=(ALL) NOPASSWD:ALL'
 
-- name: Update root .vimrc
+- name: Update User .vimrc
   become: true
+  become_user: '{{ user1_name }}'
   copy:
-    src: /etc/ansible/files/vimrc
-    dest: /home/root/.vimrc
-    owner: root
-    group: foo
-    mode: u=rw,g=r,o=r
+    src: /etc/ansible/files/misc/vimrc
+    dest: ~/.vimrc
+    owner: '{{ user1_name }}'
+    
