--- a/host_vars/do-lhr1.yml
+++ b/host_vars/do-lhr1.yml
@@ -1,6 +1,11 @@
 ---
+# Network Variables
 ansible_host: 165.227.235.191
 hostname: do-lhr1.310networks.com
+dns1: 9.9.9.9
+dns2: 8.8.8.8
+
+# DN42 Variables
 dn42_network: 172.20.15.160/27
 dn42_ip: 172.20.15.161
 dn42_asn: 4242423310
