--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,7 +8,7 @@ connection_plugins = ./plugins/connection
 jinja2_extensions = jinja2.ext.do
 private_key_file = ./files/keys/ansible_id_rsa
 remote_user = ansible
-ask_vault_pass = True
+ask_vault_pass = False
 force_color = 1
 inventory = /etc/ansible/310-inventory.ini
 log_path=/var/log/ansible.log
