add development packages to centos-packages main task

--- a/roles/centos-packages/tasks/main.yml
+++ b/roles/centos-packages/tasks/main.yml
@@ -8,3 +8,8 @@
    - vim
    - git
 
+- name: Install Development Tools package group
+  become: true
+  yum:
+    name: "@Development tools"
+    state: present
