update default centos packages in role

--- a/roles/centos-packages/tasks/main.yml
+++ b/roles/centos-packages/tasks/main.yml
@@ -7,6 +7,10 @@
    - nodejs
    - vim
    - git
+   - openssl-devel
+   - boost
+   - boost-devel
+   - boost-doc
 
 - name: Install Development Tools package group
   become: true
