add vltr server

--- a/310-inventory.ini
+++ b/310-inventory.ini
@@ -1,5 +1,6 @@
 [node-cryptonote-pool]
 ha2-jfk1
+vltr-lax1
 
 [bsd11]
 do-fra1
@@ -11,6 +12,7 @@ do-fra1
 do-jfk1
 do-lhr1
 ha2-jfk1
+vltr-lax1
 
 [useast]
 do-jfk1
@@ -20,7 +22,7 @@ ha2-jfk1
 
 
 [uswest]
-
+vltr-lax1
 
 [eueast]
 
