update vltr-lax1 ip

--- a/host_vars/vltr-lax1.yml
+++ b/host_vars/vltr-lax1.yml
@@ -1,9 +1,10 @@
 ---
 # Network Variables
-ansible_host: 207.246.98.236
+ansible_host: 45.32.85.245
 hostname: vltr-lax1.310networks.com
 dns1: 9.9.9.9
 dns2: 8.8.8.8
+ansible_distribution: Ubuntu
 
 #node-cryptonote-pool Variables
 
